# postbag

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
compile-bench/: Cargo.toml  bench.sh
compile-bench/src/: bincode.rs  bincode2.rs  data.rs  postbag_full.rs  postbag_slim.rs  serde_json.rs  serde_only.rs  types.rs
examples/: convenience_api.rs  numerical_identifiers.rs
source/postcard/: Cargo.toml
source/postcard-schema/tests/: schema.rs
source/postcard/src/: error.rs  fixint.rs  lib.rs  varint.rs
source/postcard/src/de/: deserializer.rs  flavors.rs  mod.rs  skippable.rs
source/postcard/src/ser/: flavors.rs  mod.rs  serializer.rs  skippable.rs
source/postcard/tests/: cfg_test.rs  compat.rs  de.rs  loopback.rs  ser.rs
src/: cfg.rs  error.rs  fixint.rs  lib.rs  varint.rs
src/de/: deserializer.rs  mod.rs  skippable.rs
src/ser/: mod.rs  serializer.rs  skippable.rs
tests/: compat.rs  loopback.rs
