[package]
name = "postbag"
version = "0.1.0"
authors = [
    "Sebastian Urban <surban@surban.net>",
    "James Munns <james@onevariable.com>",
]
edition = "2024"
readme = "README.md"
repository = "https://github.com/surban/postbag"
description = "Postbag Serde Codec"
license = "Apache-2.0"
categories = ["encoding"]
keywords = ["serde"]

[dependencies]
serde = "1.0.219"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
